[gd_scene load_steps=2 format=2]

[ext_resource path="res://Shop/Shop.gd" type="Script" id=1]

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Unit1" type="Button" parent="."]
margin_left = 77.5147
margin_top = 87.7815
margin_right = 162.515
margin_bottom = 107.782
text = "Unit 1 {1,1}"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit2" type="Button" parent="."]
margin_left = 207.904
margin_top = 90.3482
margin_right = 292.904
margin_bottom = 110.348
text = "Unit 2 {2,1}"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit3" type="Button" parent="."]
margin_left = 135.522
margin_top = 154.003
margin_right = 220.522
margin_bottom = 174.003
text = "Unit 3 {3,2}"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Unit1" to="." method="_on_Unit1_pressed"]
[connection signal="pressed" from="Unit2" to="." method="_on_Unit2_pressed"]
[connection signal="pressed" from="Unit3" to="." method="_on_Unit3_pressed"]
